--- a/site-frontend/src/App.css
+++ b/site-frontend/src/App.css
@@ -36,3 +36,18 @@
     transform: rotate(360deg);
   }
 }
+
+.search-form {
+    top: 4px;
+}
+.search-form {
+    left: 26%;
+    top: 9px;
+    right: 279px;
+    transition: top .3s;
+}
+
+form {
+    display: block;
+    margin-top: 0em;
+}
