--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -51,3 +51,19 @@ form {
     display: block;
     margin-top: 0em;
 }
+
+.collapsible {
+  background-color: #F7F7F7;
+  color: black;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  text-align: left;
+  font-size: 15px;
+  border-radius: 0.5rem;
+  box-shadow: rgb(230 233 234) 0 0 0 1px;
+}
+
+.active, .collapsible:hover {
+  background-color: #FFFFFF;
+}
