--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -131,6 +131,7 @@ padding-left: 0;
   display: flex;
   list-style: none;
   outline: none;
+  padding-bottom: 5rem;
 }
 .pagination > .active > a{
   background-color: #47ccde ;
