--- a/backend/src/marketplace/templates/product_page.html
+++ b/backend/src/marketplace/templates/product_page.html
@@ -1,9 +1,9 @@
 {% extends 'admin/change_form.html' %}
 
 {% block submit_buttons_bottom %}
-
 {{ block.super }}
     <div class="submit-row">
+            <input type="submit" value="Detach Product" name="detach-product" style="background: orange">
             <input type="submit" value="Force Scrape" name="force-scrape">
     </div>
 {% endblock %}
