--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,53 +1,33 @@
-.App {
-  text-align: center;
-}
+.app-main_active{
+    opacity: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+    top: 4rem;
+    bottom: 0;
+    padding: 0;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app-main{
+    opacity: 0.2;
+    z-index: 0;
+    background-color: rgba(210, 210, 210, 0.5);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center;
+    top: 4rem;
+    bottom: 0;
+    padding: 0;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.app-header{
+    height: 4rem;
+    padding: 0;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.search-form {
-    top: 4px;
-}
-.search-form {
-    left: 26%;
-    top: 9px;
-    right: 279px;
-    transition: top .3s;
-}
-
-form {
-    display: block;
-    margin-top: 0em;
+.app-footer{
+    align-items: flex-end;
+    padding: 0;
+    height: 3rem;
+    text-align: center;
 }
